deployed getDocText
